--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -8,6 +8,8 @@ info:
 paths:
   /session:
     post:
+      security:
+        - bearerAuth: [wasaphoto]
       tags: 
         - Login
       summary: Logs in the user
@@ -21,12 +23,14 @@ paths:
         content:
           application/json:
             schema:
+              description: username of the user
               type: object
               properties:
                 name:
+                  description: username without underscore 
                   type: string
                   example: Maria
-                  pattern: ˆ.*?$
+                  pattern:  '^(?!.*_).*$'
                   minLength: 3
                   maxLength: 16
         required: true
@@ -49,7 +53,7 @@ paths:
     get:
       
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Account 
       summary: Users stream
@@ -61,7 +65,10 @@ paths:
           content:
             application/json:
               schema:
+                description: array containing all the photos for the user who is logged in 
                 type: array
+                minItems: 0
+                maxItems: 500
                 items:
                   $ref: '#/components/schemas/photos'
               
@@ -75,7 +82,7 @@ paths:
           $ref: '#/components/schemas/username'
       
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags: 
         - User's Account 
       summary: Update username
@@ -99,7 +106,7 @@ paths:
           description: username already taken set another
     post:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Account 
       summary: upload a new photo
@@ -119,6 +126,7 @@ paths:
           content:
             image/png:
               schema:
+                description: photo
                 type: string
                 format: binary
         '204':
@@ -141,7 +149,7 @@ paths:
           $ref: '#/components/schemas/username'
     post:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Friend Management
       summary: following a user 
@@ -160,6 +168,7 @@ paths:
           content: 
             application/json:
               schema:
+                description: a list of users 
                 type: array
                 minItems: 0
                 maxItems: 1000
@@ -169,7 +178,7 @@ paths:
           description: Sorry!! cannot find user
     delete:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags: 
         - User's Friend Management
       summary: unfollowing a user
@@ -196,7 +205,7 @@ paths:
             $ref: '#/components/schemas/username'
     post:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Block list Management
       summary: banning user
@@ -215,6 +224,7 @@ paths:
           content: 
             application/json:
               schema:
+                description: banlist of the user
                 type: array
                 minItems: 0
                 maxItems: 1000
@@ -224,7 +234,7 @@ paths:
           description: User not found
     delete:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Block list Management
       summary: unbanning user 
@@ -244,7 +254,7 @@ paths:
             $ref: '#/components/schemas/username'
     get:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - User's Profile
       summary: user checking their profile
@@ -256,13 +266,14 @@ paths:
           content:
             application json:
               schema:
+                description: contents of the profile of the user 
                 type: object
                 properties:
                   photos:
                     type: array
                     description: photos of the user in reverse chronological order
-                    minLength: 0
-                    maxLength: 1000
+                    minItems: 0
+                    maxItems: 1000
                     items:
                       $ref: '#/components/schemas/photos'
                   followers:
@@ -291,14 +302,15 @@ paths:
         description: photo id of the particular photo
         required: true
         schema:
+          description: photoid of the photo
           type: string 
-          pattern: ˆ.*?$
+          pattern: '^.*?$'
           minLength: 0
           maxLength: 40
           example: 'maria_2'
     post:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags: 
         - Photo Operation
       summary: liking photo
@@ -323,7 +335,7 @@ paths:
     
     delete:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - Photo Operation
       summary: removing like 
@@ -346,14 +358,15 @@ paths:
           description: photo id of the particular photo
           required: true
           schema:
+            description: photo id of the photo
             type: string 
-            pattern: ˆ.*?$
+            pattern:   '^.*?$'
             minLength: 0
             maxLength: 40
             example: 'maria_2'
     post:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - Photo Operation
       summary: commenting on a photo
@@ -375,7 +388,7 @@ paths:
                 $ref: '#/components/schemas/photos'
     delete:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - Photo Operation
       summary: removing comment
@@ -398,14 +411,15 @@ paths:
           description: photo id of the particular photo
           required: true
           schema:
+            description: photo id of the photo
             type: string 
-            pattern: ˆ.*?$
+            pattern:   '^.*?$'
             minLength: 0
             maxLength: 40
             example: 'maria_2'
     delete:
       security:
-        - bearerAuth: [wasaphoto security] 
+        - bearerAuth: [ ] 
       tags:
         - Photo Operation
       summary: deleting photo
@@ -423,53 +437,63 @@ components:
       bearerFormat: JWT
   schemas:
     comments:
+      description: comments 
       type: object
       properties:
         photo_username_number:
+          description: photoid of the photo
           type: string
-          pattern: ˆ.*?$
+          pattern:  '^.*?$'
           minLength: 0
           maxLength: 50
           example: maria1205
         commenter_username:
+          description: username of the commenter 
           type: string
-          pattern: ˆ.*?$
+          pattern:   '^(?!.*_).*$'
           minLength: 0
           maxLength: 30
           example: abcdef012345
         comment:
+          description: comment 
           type: string
-          pattern: ˆ.*?$
+          pattern:  '^.*?$'
           minLength: 5
           maxLength: 50
           example: beautiful
           
     like:
       type: object
+      description: like on the photo
       properties:
         photo_username_number:
+          description: photoid of the photo
           type: string
-          pattern: ˆ.*?$
+          pattern:  '^.*?$'
           minLength: 0
           maxLength: 50
           example: maria1205
         liked_by:
+          description: id of the liker
           type: string
-          pattern: ˆ.*?$
+          pattern:  '^(?!.*_).*$'
           minLength: 0
           maxLength: 30
           example: abcdef012345
         like:
+          description: like or unlike 
           type: boolean
     username:
       type: object
+      description: username 
       properties:
         identifier:
+          description: username
           type: string
           minLength: 0
           maxLength: 30
           example: abcdef012345
-          pattern: ˆ.*?$
+          pattern: '^(?!.*_).*$'
     photos:
       description: 'it gives photos of particular user with photo number and all details about the photo'
       type: array
@@ -482,7 +506,7 @@ components:
           format: binary
         - 
           type: string 
-          pattern: ˆ.*?$
+          pattern:   '^.*?$'
           description: userid of the uploader concataned with number of the photo of that user to make it a unique id for photo
           minLength: 0
           maxLength: 40
@@ -499,12 +523,4 @@ components:
           description: number of comments
           minimum: 0
           example: 23
-        - type: array
-          minItems: 1
-          maxItems: 200
-          items:
-            type: string
-            pattern: ˆ.*?$
-            minLength: 5
-            maxLength: 50
-            example: 'awesome'
+        
